[package]
name = "graphics-test-rainbow-smoke"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.9"
winit = "0.26"
winit_input_helper = "0.11"
# nalgebra = "0.30.1"
rayon = "1.5.1"
rand = "0.8.5"