[package]
name = "graphics-test-rend3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rend3 = "0.3.0"
rend3-routine = "0.3.0"
rend3-framework = "0.3.0"
rend3-imgui = "0.3.0"
glam = "0.20.5"
winit = "0.26.1"
imgui = "0.8.2"
imgui-winit-support = { version = "0.8.2", default-features = false, features = ["winit-26"] }
instant = "0.1.12"
